# MIBASFetcher

./: .gitignore  README.md  atlases.json  ds004401_1.0.0.manifest  ds004401_1.0.0_url_list.txt  ds004401_1.0.1.manifest  ds004401_1.0.1_url_list.txt  ds004401_1.1.0.manifest  fetch.py  fetch_atlases.py  git_atlases.py  pyproject.toml
.github/workflows/: update_atlases.yaml
mibasfetcher/: atlases.json  ds004401_1.0.0.manifest  ds004401_1.0.1.manifest  ds004401_1.1.0.manifest  fetch_atlases.py  git_atlases.py
